Improving minor layout issues on mobile screens

--- a/themes/cybercomic/assets/css/main.tpl.css
+++ b/themes/cybercomic/assets/css/main.tpl.css
@@ -748,6 +748,7 @@ table {
   border-collapse: collapse;
   border-top: 3px solid var(--color-ink);
   border-bottom: 3px solid var(--color-ink);
+  table-layout: fixed;
 }
 
 th,
@@ -765,15 +766,17 @@ tr {
   border-bottom: 1px solid #999999;
 }
 
-tr:nth-child(1) {
-  width: fit-content;
-}
+
 
 th,
 td {
   border-right: 1px solid #999999;
   border-left: 1px solid #999999;
+  overflow-wrap: break-word;
+  word-break: break-word;
 }
+
+
 
 :root tbody tr:nth-child(odd) {
   background-image: url('data:image/svg+xml;utf8,<svg width="100" height="100" transform="rotate(25)" opacity="0.4" version="1.1" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><g  fill="%23{{- substr $logoHigh 1 -}}"><circle cx="25" cy="25" r="12.5"/><circle cx="75" cy="75" r="12.5"/><circle cx="75" cy="25" r="12.5"/><circle cx="25" cy="75" r="12.5"/></g></svg>');
